[tool.poetry]
name = "confluence-storage-meter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = {git = "https://github.com/psf/requests"}

[tool.poetry.group.dev.dependencies]
pytest = {git = "https://github.com/pytest-dev/pytest"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
